--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "johnny-five": "^2.1.0",
+    "serialport": "^12.0.0",
+    "socket.io": "^4.7.3"
   }
 }
